# octopied-game

./: .gitignore  LICENSE  README.md  constants.py  game_object.py  ingredient.py  ingredient_spawner.py  main.py  minigame_base.py  minigame_filling.py  octopus.py  pie_crust.py  pyproject.toml  recipe.py  tentacle.py
recipes/: apple_pie.json
